aos overflow fix

--- a/src/AboutUs/FAQ.css
+++ b/src/AboutUs/FAQ.css
@@ -16,7 +16,7 @@
   padding: 15px;
   text-align: left;
   font-size: 17px;
-
+  color: var(--contrast);
   cursor: pointer;
   display: flex;
   justify-content: space-between;
